--- a/config/orbit.toml.tmpl
+++ b/config/orbit.toml.tmpl
@@ -12,7 +12,7 @@ name = "athena"
 http-endpoint = "$ATHENA_HTTP_URL"
 ws-endpoint = "$ATHENA_WS_URL"
 explorer = "http://athena-explorer.localhost"
-chain-id = 5001
+chain-id = 3884533461
 block-confirmations = 0
 private-key = "$ATHENA_TESTNET_PRIVATE_KEY"
 enabled = true
@@ -24,8 +24,8 @@ deployed-at = 1
 events-watcher = { enabled = true, polling-interval = 1000, print-progress-interval = 60000 }
 withdraw-config = { withdraw-fee-percentage = 0, withdraw-gaslimit = "0x350000" }
 linked-anchors = [
-  { type = "Evm", chain = "hermes", chain-id = 5002, address = "VANCHOR_ADDRESS" },
-  { type = "Evm", chain = "demeter", chain-id = 5003, address = "VANCHOR_ADDRESS" },
+  { type = "Evm", chain = "hermes", chain-id = 3884533462, address = "VANCHOR_ADDRESS" },
+  { type = "Evm", chain = "demeter", chain-id = 3884533463, address = "VANCHOR_ADDRESS" },
 ]
 smart-anchor-updates = { enabled = true, max-time-delay = 300, min-time-delay = 30 }
 proposal-signing-backend = { type = "Mocked", private-key = "$MOCKED_BACKEND_KEY" }
@@ -42,7 +42,7 @@ name = "hermes"
 http-endpoint = "$HERMES_HTTP_URL"
 ws-endpoint = "$HERMES_WS_URL"
 explorer = "http://hermes-explorer.localhost"
-chain-id = 5002
+chain-id = 3884533462
 block-confirmations = 0
 private-key = "$HERMES_TESTNET_PRIVATE_KEY"
 enabled = true
@@ -54,8 +54,8 @@ deployed-at = 1
 events-watcher = { enabled = true, polling-interval = 1000, print-progress-interval = 60000 }
 withdraw-config = { withdraw-fee-percentage = 0, withdraw-gaslimit = "0x350000" }
 linked-anchors = [
-  { type = "Evm", chain = "athena", chain-id = 5001, address = "VANCHOR_ADDRESS" },
-  { type = "Evm", chain = "demeter", chain-id = 5003, address = "VANCHOR_ADDRESS" },
+  { type = "Evm", chain = "athena", chain-id = 3884533461, address = "VANCHOR_ADDRESS" },
+  { type = "Evm", chain = "demeter", chain-id = 3884533463, address = "VANCHOR_ADDRESS" },
 ]
 smart-anchor-updates = { enabled = true, max-time-delay = 300, min-time-delay = 30 }
 proposal-signing-backend = { type = "Mocked", private-key = "$MOCKED_BACKEND_KEY" }
@@ -72,7 +72,7 @@ name = "demeter"
 http-endpoint = "$DEMETER_HTTP_URL"
 ws-endpoint = "$DEMETER_WS_URL"
 explorer = "http://demeter-explorer.localhost"
-chain-id = 5003
+chain-id = 3884533463
 block-confirmations = 0
 private-key = "$DEMETER_TESTNET_PRIVATE_KEY"
 enabled = true
@@ -84,8 +84,8 @@ deployed-at = 1
 events-watcher = { enabled = true, polling-interval = 1000, print-progress-interval = 60000 }
 withdraw-config = { withdraw-fee-percentage = 0, withdraw-gaslimit = "0x350000" }
 linked-anchors = [
-  { type = "Evm", chain = "athena", chain-id = 5001, address = "VANCHOR_ADDRESS" },
-  { type = "Evm", chain = "hermes", chain-id = 5002, address = "VANCHOR_ADDRESS" },
+  { type = "Evm", chain = "athena", chain-id = 3884533461, address = "VANCHOR_ADDRESS" },
+  { type = "Evm", chain = "hermes", chain-id = 3884533462, address = "VANCHOR_ADDRESS" },
 ]
 smart-anchor-updates = { enabled = true, max-time-delay = 300, min-time-delay = 30 }
 proposal-signing-backend = { type = "Mocked", private-key = "$MOCKED_BACKEND_KEY" }
